--- a/config/user_configs.json
+++ b/config/user_configs.json
@@ -11,5 +11,15 @@
 			"should_update": true,
 			"should_read": true
 		}
-	]
+	],
+	"urls": [
+        {
+            "type": "pic",
+            "url": "https://raw.githubusercontent.com/Aporia2001/EDOAporia-Custom-Cards-pics/main/{}.jpg"
+        },
+        {
+            "type": "field",
+            "url": "https://raw.githubusercontent.com/Aporia2001/EDOAporia-Custom-Cards-pics/main/field/{}.jpg"
+        }
+    ]
 }
